# jina-rerank

./: Dockerfile  main.py  pyproject.toml
models/: __init__.py  info.py  rerank.py
