[project]
name = "jina-rerank"
version = "v0.5.7"
urls = { "homepage" = "https://github.com/joanfabregat/jina-rerank" }
description = "A multilingual reranker API based on jinaai/jina-reranker-v2-base-multilingual"
authors = [
    { name = "Joan Fabrégat", email = "jfabregat@fogandfrog.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "fastembed>=0.6.0",
]

[dependency-groups]
gpu = [
    "fastembed-gpu>=0.6.0",
]